# video-to-instruction

./: .gitignore  IMG_5335.mov  IMG_5336.mov  README.md  main.py  pyproject.toml  simple.html
scripts/: agent_thread.py  continous_interaction.py  get_live_webcam_point_and_identify.py  openai_api.py  quickstart_demo.sh  run_single_task_client.py  simple_voice_agent.py  stttmp.py  video_buffer.py
src/vtii/: __init__.py  openai_api.py  simple_voice_agent.py  stt.py  video_buffer.py
src/vtii/registry/: actions.yaml
static/: IMG_5345.mov  point_and_identify.mov
